force-app/main/default/objects/Project__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>