force-app/main/default/objects/Project__c/fields/ProjectUrl__c.field-meta.xml
<CustomField>
    <fullName>ProjectUrl__c</fullName>
    <label>Project Url</label>
    <type>Url</type>
</CustomField>